# RustRayTracer

./: Cargo.toml  README.md  README.txt
SceneData/: areaDragon.json  areaLight.json  blinnArea.json  boxSphere.json  cornellBox.json  cornellPlanck.json  cornellTest.json  cow.json  dragon.json  glazeScene.json  glaze_cornell.json  homer.json  ico.json  mirroredScene.json  mirroredScene2.json  mirroredTexture.json  objBox.json  oneBox.json  oneEarth.json  oneSphere.json  oneTriangle.json  one_sphere_sky.json  phongExp.json  planck.json  rainbow.json  spheres_1k.json  threeTriangles.json  toonHomer.json  toonSphere.json
src/: AABoundingBox.rs  ArgsChecker.rs  BVHNode.rs  Camera.rs  CoordSys.rs  Framebuffer.rs  HitStruct.rs  JsonParser.rs  Light.rs  PespectiveCamera.rs  Ray.rs  SceneContainer.rs  Shader.rs  Shape.rs  Sphere.rs  Texture.rs  Triangle.rs  Vec3D.rs  l_PointLight.rs  l_SpotLight.rs  l_area.rs  lookAtCam.rs  main.rs  objParser.rs  sBox.rs  s_BlinnPhong.rs  s_Glaze.rs  s_Lambertian.rs  s_Toon.rs  s_mirror.rs
