[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
serde_json = "1.0"
rand = "0.8"
rayon = "1.5"
indicatif = "0.16"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true